Address linter errors.
